--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,14 +5,26 @@ security:
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        # les utilisateurs viennent de l'entité User
+        # et l'identifiant est l'email
+        database:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: database
+
+            form_login:
+                login_path: app_index_index
+                check_path: app_index_connexion
+
+            logout:
+                path: app_index_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
