Création page et formulaire de contact (envoi non operationnel)

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=b3557f8704f4bc944fa3b85a70d9207b
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
